--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Panos-Stergioulas-Mpolis.github.io/Weather-Report",
+  "homepage": "https://Panos-Stergioulas-Mpolis.github.io/Weather-Report/",
   "name": "weather-report",
   "version": "0.1.0",
   "private": true,
